GripperForwardController funcionando pero no sé muy bien cómo

--- a/src/arduinobot_controller/config/arduinobot_controllers.yaml
+++ b/src/arduinobot_controller/config/arduinobot_controllers.yaml
@@ -5,11 +5,11 @@ controller_manager:
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    # gripper_controller:
-    #   type: forward_command_controller/ForwardCommandController
-
     gripper_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+      type: forward_command_controller/ForwardCommandController
+
+    # gripper_controller:
+    #   type: joint_trajectory_controller/JointTrajectoryController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -34,13 +34,13 @@ gripper_controller:
   ros__parameters:
     joints:
       - joint_4
-    # interface_name: position
+    interface_name: position
       
-    command_interfaces:
-      - position
+    # command_interfaces:
+    #   - position
 
-    state_interfaces:
-      - position
+    # state_interfaces:
+    #   - position
 
-    open_loop_control: true
-    allow_integration_in_goal_trajectories: true
+    # open_loop_control: true
+    # allow_integration_in_goal_trajectories: true
