--- a/src/arduinobot_msgs/CMakeLists.txt
+++ b/src/arduinobot_msgs/CMakeLists.txt
@@ -13,6 +13,8 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/AddTwoInts.srv"
+  "srv/EulerToQuaternion.srv"
+  "srv/QuaternionToEuler.srv"
 
 )
 
