Cpp angle conversion service working.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
     "/home/sistemas/arduinobot_ws/install/arduinobot_py_examples/lib/python3.12/site-packages",
     "/home/sistemas/arduinobot_ws/install/arduinobot_msgs/lib/python3.12/site-packages",
     "/opt/ros/jazzy/lib/python3.12/site-packages"
-  ]
+  ],
+  "ROS2.distro": "jazzy"
 
 }
 
