--- a/src/arduinobot_utils/CMakeLists.txt
+++ b/src/arduinobot_utils/CMakeLists.txt
@@ -5,10 +5,13 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
+# 1. Buscar dependencias necesarias
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(arduinobot_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
@@ -19,6 +22,24 @@ ament_python_install_package(${PROJECT_NAME})
 install(PROGRAMS
   ${PROJECT_NAME}/angle_conversion.py
   DESTINATION lib/${PROJECT_NAME})
+
+
+# Compilación e Instalación para C++
+add_executable(angle_conversion src/angle_conversion.cpp)
+
+# Vincula las dependencias de ROS 2 (esto corrige el error de rclcpp.hpp)
+ament_target_dependencies(angle_conversion
+  rclcpp
+  tf2
+  tf2_geometry_msgs
+  arduinobot_msgs
+)
+
+
+install(TARGETS
+  angle_conversion
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
