--- a/src/arduinobot_utils/package.xml
+++ b/src/arduinobot_utils/package.xml
@@ -12,6 +12,9 @@
 
   <depend>rclpy</depend>
   <depend>arduinobot_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
