--- a/src/arduinobot_moveit/package.xml
+++ b/src/arduinobot_moveit/package.xml
@@ -11,7 +11,7 @@
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
-  <exec_depend>moveit_config_utils</exec_depend>
+  <exec_depend>moveit_configs_utils</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
