--- a/src/arduinobot_moveit/config/initial_positions.yaml
+++ b/src/arduinobot_moveit/config/initial_positions.yaml
@@ -1,5 +1,7 @@
-initial_position:
-  joint_1: 0.0
-  joint_2: 0.0
-  joint_3: 0.0
-  joint_4: 0.0
+# Default initial positions for arduinobot's ros2_control fake system
+
+initial_positions:
+  joint_1: 0
+  joint_2: 0
+  joint_3: 0
+  joint_4: 0
